Go back to collapsed qp but keep current style when expanded. Fix click out listeners to collapse back when nothing has changed.

--- a/scss/modules/_theme.scss
+++ b/scss/modules/_theme.scss
@@ -145,7 +145,7 @@ $dark_mode: "dark";
   --cmail-section-bt-color: white;
   --cmail-me-separator: #{rgba($deep_navy, 0.3)};
   --cmail-collapsed-background-color: #{rgba(white, 0.09)};
-  --cmail-box-shadow: rgba(0, 0, 0, 0.24);
+  --cmail-box-shadow: rgba(255, 255, 255, 0.07);
   --cmail-qp-outer-border: #{rgba(white, 0.16)};
 
   // User dropdown
